fix text alignment

--- a/src/middle-school/sass/participant-center.scss
+++ b/src/middle-school/sass/participant-center.scss
@@ -331,6 +331,7 @@ select#ym-update-challenge {
 	    display: block;
 	    margin-top: 5px;
 	    margin-bottom: 10px;
+	    text-align: center;
 	}
     }
   }
